secretsmanagement/virtualservices/canvas-vault-landing-page.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: canvas-vault
  name: canvas-vault-landing-page
  labels:
    app: canvas-vault-landing-page
spec:
  selector:
    app: canvas-vault-landing-page
  ports:
  - port: 80
    name: ngx
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: canvas-vault
  name: canvas-vault-landing-page
  labels: 
    app: canvas-vault-landing-page
spec:
  selector:
    matchLabels:
      app: canvas-vault-landing-page
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: canvas-vault-landing-page
    spec:
      containers:
        - name: canvas-vault-landing-page
          image: nginx
          volumeMounts:
          - name: init-script
            mountPath: /docker-entrypoint.d/init
      volumes:
        - name: init-script
          configMap:
            name: canvas-vault-landing-page-init-cm
            defaultMode: 0777
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: canvas-vault-landing-page
  name: canvas-vault-landing-page-vs
  namespace: canvas-vault
spec:
  gateways:
  - components/component-gateway
  hosts:
  - canvas-vault-hc.ihc-dt.cluster-3.de
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: canvas-vault-landing-page.canvas-vault.svc.cluster.local
        port:
          number: 80
