secretsmanagement/virtualservices/keycloak-landing-page.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: canvas
  name: canvas-keycloak-landing-page
  labels:
    app: canvas-keycloak-landing-page
spec:
  selector:
    app: canvas-keycloak-landing-page
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: canvas
  name: canvas-keycloak-landing-page
  labels: 
    app: canvas-keycloak-landing-page
spec:
  selector:
    matchLabels:
      app: canvas-keycloak-landing-page
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: canvas-keycloak-landing-page
    spec:
      containers:
        - name: canvas-keycloak-landing-page
          image: nginx
          volumeMounts:
          - name: init-script
            mountPath: /docker-entrypoint.d/init
      volumes:
        - name: init-script
          configMap:
            name: canvas-keycloak-landing-page-init-cm
            defaultMode: 0777
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  namespace: canvas
  name: canvas-keycloak-landing-page-vs
  labels:
    app: canvas-keycloak-landing-page
spec:
  gateways:
  - components/component-gateway
  hosts:
  - canvas-keycloak.ihc-dt.cluster-3.de
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: canvas-keycloak-landing-page.canvas.svc.cluster.local
        port:
          number: 80
